--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+spring.security.user.name=satvik
+spring.security.user.password=satvik
+
+#db config
+spring.datasource.url=jdbc:mysql://localhost:3306/financemanager
+spring.datasource.username=root
+spring.datasource.password=root
+
+#jpa config
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+#driver classname
+#dialect
